updated user-select prop

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         color: white;
         font-weight: 200;
         top: -6%;
+        user-select: none;
     }
     
     .slide img {
@@ -39,6 +40,7 @@
         height: 100%;
         margin: 0 auto;
         display: block;
+        user-select: none;
     }
     
     .button-wrapper a {
