updated slide theme

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Football Slideshow</title>
+    <title>Puppy Slideshow</title>
     <style type="text/css">
     body {
         padding: 0;
         margin: 0;
         font-family: sans-serif;
-        background: url('lff.jpg');
+        background: url('grass.jpg');
         background-size: cover;
     }
     
@@ -71,36 +71,36 @@
 <body>
     <div id="slideshow">
         <div class="slide">
-            <h3>Aaron Rodgers</h3>
-            <img src="arod.jpg">
+            <h3>Golden Retriever</h3>
+            <img src="golden.jpg">
         </div>
         <div class="slide">
-            <h3>Julio Jones</h3>
-            <img src="julio2.jpg">
+            <h3>Siberian Husky</h3>
+            <img src="husky.jpg">
         </div>
         <div class="slide">
-            <h3>TY Hilton</h3>
-            <img src="hilton.jpg">
+            <h3>West Highland Terrier</h3>
+            <img src="westie.jpg">
         </div>
         <div class="slide">
-            <h3>Frank Gore</h3>
-            <img src="gore.jpg">
+            <h3>Cockapoo</h3>
+            <img src="cockapoo.jpg">
         </div>
         <div class="slide">
-            <h3>Terrance West</h3>
-            <img src="terrance-west.jpg">
+            <h3>Shiba Inu</h3>
+            <img src="shiba.jpg">
         </div>
         <div class="slide">
-            <h3>Steve Smith Sr.</h3>
-            <img src="stevesmith.jpg">
+            <h3>Dalmation</h3>
+            <img src="dalmation.jpg">
         </div>
         <div class="slide">
-            <h3>Dan Bailey</h3>
-            <img src="danbailey.jpg">
+            <h3>Border Collie</h3>
+            <img src="bcollie.jpg">
         </div>
         <div class="slide">
-            <h3>Carolina Panthers</h3>
-            <img src="panthers.jpg">
+            <h3>Great Pyrenees</h3>
+            <img src="pyrenees.jpg">
         </div>
         <div class="button-wrapper">
             <a class="back-button" onclick="moveSlide(-1)">Previous</a>
