--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <img src="bcollie.jpg">
         </div>
         <div class="slide">
-            <h3>Great Pyrenees</h3>
-            <img src="pyrenees.jpg">
+            <h3>Jack Russell Terrier</h3>
+            <img src="jrussell.jpg">
         </div>
         <div class="button-wrapper">
             <a class="back-button" onclick="moveSlide(-1)">Previous</a>
